# mia-uc-chile-proyecto-aplicado-1

./: .gitignore  README.md  Readme.md  app.py  pyproject.toml
Rag_Test/: Readme.md  app.py  app_1.py
Rag_Test/qdrant_data/collection/rag_chunks/: storage.sqlite
Rag_Test/src/: .env
Rag_Test/src/infrastructure/embeddings/: gemini.py
datasets/: evaluation_results.csv  golden_dataset.csv
rag/: .env_example  langgraph.json  pyproject.toml
rag/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
rag/data/data_md_files/: 1-s2.0-S0022316622152399-main.md
rag/evals/: 05_benchmarks.ipynb  05_benchmarks_RAG.ipynb
rag/evals/datasets/: 1-s2.0-S0022316622152399-main_testset.csv
rag/evals/experiments/: 20251126-164854_naive_rag_local.csv  20251126-164933_naive_rag_local.csv  20251126-170027_agentic_rag.csv
rag/interfaces/: app.py
rag/notebooks/: .env_example  Ingesta_de_documentos.ipynb  L5_tools_with_mcp_PubChem.ipynb  pipeline_rag_v2.ipynb  pipeline_rag_v3.ipynb  retrieval_example.ipynb
rag/src/agent/: agent.py
src/application/services/: dataset_generation_service.py
src/infrastructure/evaluation/: ragas_generator.py
src/infrastructure/vector_stores/: qdrant_db.py
src/scripts/: generate_test_dataset.py  run_eval.py
