[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.1.0",
    "langchain-mcp-adapters>=0.1.14",
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.3",
    "langgraph-cli[inmem]>=0.4.7",
    "llama-index>=0.14.8",
    "llama-index-vector-stores-qdrant>=0.9.0",
    "openai>=2.8.1",
    "qdrant-client>=1.16.0",
]
